<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weekly Payroll</string>
    <string name="action_settings">Settings</string>
    <string name="employeeName">Employee Name:</string>
    <string name="salesAmount">Sales Amount:</string>
    <string name="hoursWorked">Hours Worked:</string>
    <string name="overtimeHours">Overtime Hours:</string>
    <string name="basicAmount">Basic Amount:</string>
    <string name="bonusAmount">Bonus:</string>
    <string name="salaryAmount">Salary Amount:</string>
    <string name="computeButtonString">Compute</string>
    <string name="moreButtonString">More</string>
    <string name="showResultsButtonString">Show Results</string>

</resources>
